--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,11 @@ body {
 
 .factFrame {
     width: 100%;
-    position: relative;
-    top: 60px;
+    position: fixed;
+    top: 20%;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-
+    flex-grow: 0;
 
 }
 
@@ -24,10 +23,11 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-around;
-    align-items: stretch;
-    position: relative;
-    top: 250px;
+    align-items: center;
+    position: fixed;
+    top: 80%;
     flex-shrink: 0;
+    flex-grow: 0;
 }
 
 #logo {
@@ -70,7 +70,13 @@ h1 {
 }
 
 .btn{
-    border-radius: 30px;
+    align-content: center;
+    border-radius: 35px;
+    border-top-style: none;
+    border-left-style: none;
+    border-color: #ffa200;
+    border-width: 3px;
+    box-shadow: 8px 8px 3px 0 rgba(92, 90, 90, 0.8);
 }
 
 .poetsen-one-regular {
@@ -92,6 +98,8 @@ h1 {
     color: #FBECD7;
     height: 80px;
     width: 80px;
+    border-radius: 30px;
+    transition: transform .2s;
 }
 
 #newFactButton {
@@ -107,4 +115,5 @@ h1 {
     background-color: #328CC2;
     height: 80px;
     width: 80px;
+    border-radius: 30px;
 }
