--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+    width: 100%;
     background-color: #FDFEF0;
     display: flex;
     flex-direction: column;
@@ -29,10 +30,18 @@ body {
     flex-shrink: 0;
     flex-grow: 0;
 }
+.boxLogo {
+    display: flex;
+    position: fixed;
 
+    flex-shrink: 0;
+    flex-grow: 0;
+
+}
 #logo {
     width: 100%;
     margin-top: 10px;
+
 
 }
 
@@ -45,6 +54,7 @@ h1 {
 }
 
 #factLocation {
+    width: 80%;
     font-family: "Istok Web", sans-serif;
     font-size:x-large;
     font-weight: bold;
