--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    width: 100%;
+    width: 95%;
     background-color: #FDFEF0;
     display: flex;
     flex-direction: column;
@@ -33,7 +33,6 @@ body {
 .boxLogo {
     display: flex;
     position: fixed;
-
     flex-shrink: 0;
     flex-grow: 0;
 
@@ -41,8 +40,8 @@ body {
 #logo {
     width: 100%;
     margin-top: 10px;
-
-
+    flex-shrink: 0;
+    flex-grow: 0;
 }
 
 h1 {
@@ -126,4 +125,13 @@ h1 {
     height: 80px;
     width: 80px;
     border-radius: 30px;
+}
+
+.listFav {
+    list-style-type: circle;
+    list-style-position:outside;
+}
+
+.favFact {
+    font-family: "Istok Web", sans-serif;
 }
